--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,6 @@
 <app-main-layout></app-main-layout>
 <h1>Welcome</h1>
 
+<app-contacts></app-contacts>
 <app-observable></app-observable>
 <router-outlet></router-outlet>
