--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,6 +1,6 @@
 <div>List of contact Ids</div>
 
-<div style="margin: 40px">
+<div class="contact-wrapper">
   <div *ngFor="let contact of contactList">
     {{ contact.id }}
     {{ contact.contact }}
